--- a/templates/noteapp/note_delete.html
+++ b/templates/noteapp/note_delete.html
@@ -1,8 +1,19 @@
+{% extends 'index.html' %}
+{% load crispy_forms_tags %}
+{% block content %}
 
-<h1>Are you sure you want to delete your note: {{ note.title }}</h1>
-<form action="" method="POST">
-    {% csrf_token %}
-    {{ form.as_p }}
 
-    <input type="submit" value="delete">
-</form>
+<div class="card-container">
+    <div class="card-box">
+
+        <h1>Are you sure you want to delete your note: {{ note.title }}</h1>
+        <form action="" method="POST">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <input type="submit" value="delete">
+        </form>
+
+    </div>
+</div>
+
+{% endblock %}
