--- a/templates/noteapp/note_form.html
+++ b/templates/noteapp/note_form.html
@@ -1,12 +1,20 @@
 
+{% extends 'index.html' %}
+{% load crispy_forms_tags %}
+{% block content %}
 
 
+    <div class="card-container">
+        <div class="card-box">
+            <h1>Add Note</h1>
+
+            <form action="" method="POST">
+                {% csrf_token %}
+                {{ form|crispy}}
+                <input type="submit" value="submit">
+            </form>
+        </div>
+    </div>
 
 
-
-<form action="" method="POST">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <input type="submit" value="submit">
-</form>
-
+{% endblock %}
